# QuickLauncher

./: .gitignore  Command.cs  CommandType.cs  ISearchEngine.cs  IniCommandImporter.cs  QuickLauncher.Engine.slnx  README.md  SearchEngine.cs  requirements.txt  run.py
Expressions/: ExpressionRegistry.cs  IExpressionHandler.cs
Expressions/Handlers/: AudioToggleMuteHandler.cs  PowerShellHandler.cs  SendKeysHandler.cs  SystemPowerHandler.cs
Hotkeys/: HotkeyBinding.cs  IHotkeyService.cs  Modifiers.cs  WindowsHotkeyService.cs
backend/: app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
quicklauncher_py/: __init__.py  app.py  llm.py  search.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
